--- a/index.html
+++ b/index.html
@@ -12,32 +12,33 @@
 <body>
     <div id="main-container">
         <div class="row"> 
-            <div class="col-lg-12"><h1>Crystals Collector!</h1></div>
+            <div class="col-lg-12" id="heading"><h1>Crystals Collector!</h1></div>
         </div>
         <div class="row">
-            <div class="col-lg-12"><p>blah blah blah </p></div>
-        </div>        
+            <div class="col-lg-12" id="content"><p>row2  blah blah blah </p></div>
+        </div>     
+           
         <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12" id="winloss">
                     <div id="score"></div>
-                    <div id="WinsLosses">Wins: <span id="wins"></span><br> Losses: <span id="loses"></span></div>
+                    <div id="WinsLosses">row3  Wins: <span id="wins"></span><br>row3Losses: <span id="loses"></span></div>
                 </div>
         </div>
         <div class="row">
                 <div class="col-lg-12">
-                    <div id="crystal-images" >
-                        <img src="assets/images/crystal1.jpg" alt="bluecrystal">
+                    <div id="crystal-images" >row4 Crystal Images Go Here
+                        <!-- <img src="assets/images/crystal1.jpg" alt="bluecrystal">
                         <img src="assets/images/crystal2.jpg" alt="yellowcrystal">
                         <img src="assets/images/crystal3.jpg" alt="pinkcrystal">
-                        <img src="assets/images/crystal4.jpg" alt="greencrystal">
+                        <img src="assets/images/crystal4.jpg" alt="greencrystal"> -->
                     </div>
                 </div>
         </div>
         <div class="row">
-                <div class="col-lg-12"><p>Your total score is:</p></div>
+                <div class="col-lg-12" id="totalScore"><p>row5  Your total score is:</p></div>
         </div>
         <div class="row">
-                <div class="col-lg-12"><span id="userScore">user score goes here</span></div>
+                <div class="col-lg-12" id="userScore"><span id="userScore">row  6user score goes here</span></div>
         </div>
     </div>
     <script src="assets/javascript/ccgame.js"></script>
